--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="spidey-theme">
     <div class="header">
       <div class="right-header">
-        <h1>S p i d e y   R o u t e   A n a l y s i s</h1>
+        <h1><i>Spidey Route Analysis</i></h1>
       </div>
       <div class="header-buttons">
         <div class="right-header">
