revert to original title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="spidey-theme">
     <div class="header">
       <div class="right-header">
-        <h1><i>Spidey Route Analysis</i></h1>
+        <h1>Spidey Route Analysis</h1>
       </div>
       <div class="header-buttons">
         <div class="right-header">
